// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ButtonSwitch interface testing isSwitchOff(boolean) 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-switch"
  content="turned off"
  id="uuID-inner"
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.Bricks.ButtonSwitch interface testing isSwitchOn(boolean) 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-switch"
  colorSchema="success"
  content="turned on"
  id="uuID-inner"
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.Bricks.ButtonSwitch interface testing switchOff(setStateCallBack) 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-switch"
  colorSchema="success"
  content="turned on"
  id="uuID-inner"
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.Bricks.ButtonSwitch interface testing switchOff(setStateCallBack) 2`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-switch"
  content="turned off"
  id="uuID-inner"
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.Bricks.ButtonSwitch interface testing switchOn(setStateCallBack) 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-switch"
  content="turned off"
  id="uuID-inner"
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.Bricks.ButtonSwitch interface testing switchOn(setStateCallBack) 2`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-switch"
  colorSchema="success"
  content="turned on"
  id="uuID-inner"
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.Bricks.ButtonSwitch interface testing toggle(setStateCallBack) set off to on 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-switch"
  content="turned off"
  id="uuID-inner"
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.Bricks.ButtonSwitch interface testing toggle(setStateCallBack) set off to on 2`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-switch"
  colorSchema="success"
  content="turned on"
  id="uuID-inner"
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.Bricks.ButtonSwitch interface testing toggle(setStateCallBack) set on to off 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-switch"
  colorSchema="success"
  content="turned on"
  id="uuID-inner"
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.Bricks.ButtonSwitch interface testing toggle(setStateCallBack) set on to off 2`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-switch"
  content="turned off"
  id="uuID-inner"
  mainAttrs={Object {}}
  size="s"
/>
`;
